# current-london-2026

./: LICENSE  README.md  analytics.py  justfile  pyproject.toml  websocket_feed.py
tests/: test_analytics.py  test_benchmark.py
tests/data/: prices.jsonl
util/: json_util.py
