[dependency-groups]
dev = []

[project]
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14"
]
dependencies = [
  "kafkars",
  "confluent-kafka",
  "websockets",
  "polars>=1.39.3",
  "tabulate>=0.10.0",
]
description = "Kafka example for London Current 2026"
name = "beavers-aiven-example"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
