[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-benchmark>=5.2.3",
]

[project]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]
dependencies = [
    "beavers[polars]",
    "kafkars",
    "confluent-kafka",
    "websockets",
    "polars>=1.39.3",
    "tabulate>=0.10.0",
    "typer>=0.25.1",
]
description = "Kafka example for London Current 2026"
name = "beavers-aiven-example"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
